fixing background overflow on mobile

--- a/assets/stylesheets/globals/_sections.scss
+++ b/assets/stylesheets/globals/_sections.scss
@@ -6,6 +6,7 @@
   background: #A5B2B6;
   padding: 40px;
   height: 100%;
+  overflow: auto;
 }
 
 .info-container {
